--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My Website</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -10,7 +11,7 @@
         <header class="neutralTheme">
             <h1>Hello! My name is <span class="h1Highlight">Beth Jefferies</span>.<br> 
              I am a Web Developer!</h1>
-            <a href="#" class="button">Find out more</a>
+            <a href="#" class="button headerLink">Find out more</a>
         </header>
         <main>
             <section class="about primaryTheme">
