--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <header class="neutralTheme">
             <h1>Hello! My name is <span class="h1Highlight">Beth Jefferies</span>.<br> 
              I am a Web Developer!</h1>
-            <a href="#" class="button headerLink">Find out more</a>
+            <a href="#about" class="button headerLink">Find out more</a>
         </header>
         <main>
-            <section class="about primaryTheme">
+            <section class="about primaryTheme" id="about">
                 <h2>About me</h2>
                 <div class="aboutContainer">
                    <img class="aboutImg" src="Images/Profile1.png" alt="Picture of Beth">
